--- a/auto_encoder_test.ipynb
+++ b/auto_encoder_test.ipynb
@@ -141,6 +141,10 @@
    "execution_count": 6,
    "id": "620907d1-a17c-4953-9436-e3ee650e4bdf",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1374,6 +1378,10 @@
    "execution_count": 18,
    "id": "484aae53-24b6-4ba5-b3dc-1bb116bf774f",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
