exersize 3 half way

--- a/Ex6.AutoEncoder.ipynb
+++ b/Ex6.AutoEncoder.ipynb
@@ -548,6 +548,10 @@
    "execution_count": null,
    "id": "f583498a-3363-4191-b913-d849d2af480a",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
