--- a/auto_encoder_test.ipynb
+++ b/auto_encoder_test.ipynb
@@ -580,7 +580,7 @@
     }
    ],
    "source": [
-    "np.linalg.norm(outliers - pred, axis=1)"
+    "np.linalg.norm(outliers - pred, axis=1) # np.linalg.norm is the loss function mean squared error "
    ]
   },
   {
@@ -3824,9 +3824,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pmot38]",
+   "display_name": "Python [conda env:aml]",
    "language": "python",
-   "name": "conda-env-pmot38-py"
+   "name": "conda-env-aml-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3838,7 +3838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
