--- a/auto_encoder_test.ipynb
+++ b/auto_encoder_test.ipynb
@@ -668,6 +668,10 @@
    "execution_count": 40,
    "id": "484aae53-24b6-4ba5-b3dc-1bb116bf774f",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -3820,9 +3824,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:aml310]",
+   "display_name": "Python [conda env:aml]",
    "language": "python",
-   "name": "conda-env-aml310-py"
+   "name": "conda-env-aml-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3834,7 +3838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
