--- a/Ex13.ReinforcementLearning.Q-Table_learning.ipynb
+++ b/Ex13.ReinforcementLearning.Q-Table_learning.ipynb
@@ -16,8 +16,8 @@
     "# 13th exercise: <font color=\"#C70039\">First Reinforcement Learning Q-Table learning</font>\n",
     "* Course: AML\n",
     "* Lecturer: <a href=\"https://www.gernotheisenberg.de/\">Gernot Heisenberg</a>\n",
-    "* Author of notebook: <a href=\"https://www.gernotheisenberg.de/\">Gernot Heisenberg</a>\n",
-    "* Date:   05.01.2024\n",
+    "* Author of notebook: Finn Heydemann\n",
+    "* Date:   14.01.2024\n",
     "\n",
     "---------------------------------\n",
     "**GENERAL NOTE 1**: \n",
@@ -72,12 +72,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "9d53fc92-527b-46c6-bc57-4e68423aa61a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'L1',\n",
+       " 1: 'L2',\n",
+       " 2: 'L3',\n",
+       " 3: 'L4',\n",
+       " 4: 'L5',\n",
+       " 5: 'L6',\n",
+       " 6: 'L7',\n",
+       " 7: 'L8',\n",
+       " 8: 'L9'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "location_to_state = {\n",
     "    'L1' : 0,\n",
@@ -91,7 +110,8 @@
     "    'L9' : 8\n",
     "}\n",
     "\n",
-    "state_to_location = dict((state,location) for location, state in location_to_state.items())"
+    "state_to_location = dict((state,location) for location, state in location_to_state.items())\n",
+    "state_to_location"
    ]
   },
   {
@@ -104,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "349627df",
    "metadata": {
     "tags": []
@@ -116,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "9ac22125",
    "metadata": {
     "tags": []
@@ -144,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "20f112bf-e2e1-42a1-a9b3-df514af058c3",
    "metadata": {
     "tags": []
@@ -166,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "36a8c7ba-023b-414c-b007-64e789dcd9f0",
    "metadata": {
     "tags": []
@@ -248,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "25bc2a1b-4291-4560-ba23-0dc145e01154",
    "metadata": {
     "tags": []
@@ -267,24 +287,24 @@
       " [  0   0   0   1   0   0   0   1   0]\n",
       " [  0   0   0   0   1   0   1   0   1]\n",
       " [  0   0   0   0   0   0   0   1   0]]\n",
-      "Q: [[3995.85082585 2249.39694146    0.            0.            0.\n",
+      "Q-table: [[3995.99457641 2249.49593613    0.            0.            0.\n",
       "     0.            0.            0.            0.        ]\n",
-      " [2997.88682523    0.         1687.93581703    0.         1687.85490113\n",
+      " [2997.99473438    0.         1688.12087724    0.         1688.12193195\n",
       "     0.            0.            0.            0.        ]\n",
-      " [   0.         2249.39058429    0.            0.            0.\n",
-      "  1266.91613806    0.            0.            0.        ]\n",
+      " [   0.         2249.4960494     0.            0.            0.\n",
+      "  1267.0900769     0.            0.            0.        ]\n",
       " [   0.            0.            0.            0.            0.\n",
-      "     0.          950.93697686    0.            0.        ]\n",
-      " [   0.         2249.39757723    0.            0.            0.\n",
-      "     0.            0.         1266.58370155    0.        ]\n",
-      " [   0.            0.         1687.93624661    0.            0.\n",
+      "     0.          951.31706967    0.            0.        ]\n",
+      " [   0.         2249.49593487    0.            0.            0.\n",
+      "     0.            0.         1267.08884021    0.        ]\n",
+      " [   0.            0.         1688.12191556    0.            0.\n",
       "     0.            0.            0.            0.        ]\n",
-      " [   0.            0.            0.          714.20141576    0.\n",
-      "     0.            0.         1266.5836127     0.        ]\n",
-      " [   0.            0.            0.            0.         1687.44494851\n",
-      "     0.          950.9302772     0.          950.92224578]\n",
+      " [   0.            0.            0.          714.48744113    0.\n",
+      "     0.            0.         1267.08942675    0.        ]\n",
+      " [   0.            0.            0.            0.         1688.11924356\n",
+      "     0.          951.31706607    0.          951.31662875]\n",
       " [   0.            0.            0.            0.            0.\n",
-      "     0.            0.         1266.5837104     0.        ]]\n",
+      "     0.            0.         1267.08943267    0.        ]]\n",
       "optimal route: ['L9', 'L8', 'L5', 'L2', 'L1']\n"
      ]
     }
@@ -301,21 +321,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2305f31a-215d-44aa-9625-19e18e03f12e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aml",
    "language": "python",
-   "name": "python3"
+   "name": "aml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -327,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
