--- a/Ex8.Regular.GenerativeAdversarialNetwork.ipynb
+++ b/Ex8.Regular.GenerativeAdversarialNetwork.ipynb
@@ -22208,9 +22208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:aml310_tf_gpu]",
+   "display_name": "aml",
    "language": "python",
-   "name": "conda-env-aml310_tf_gpu-py"
+   "name": "aml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -22222,7 +22222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
