--- a/Ex11.InterpretableML.with.LIME.ipynb
+++ b/Ex11.InterpretableML.with.LIME.ipynb
@@ -1723,9 +1723,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:aml]",
+   "display_name": "aml",
    "language": "python",
-   "name": "conda-env-aml-py"
+   "name": "aml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1737,7 +1737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
