--- a/Ex7.VariationalAutoEncoder.ipynb
+++ b/Ex7.VariationalAutoEncoder.ipynb
@@ -1712,9 +1712,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:aml]",
+   "display_name": "aml",
    "language": "python",
-   "name": "conda-env-aml-py"
+   "name": "aml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1726,7 +1726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
