--- a/Ex12.ReinforcementLearning.FrozenLakeGame.ipynb
+++ b/Ex12.ReinforcementLearning.FrozenLakeGame.ipynb
@@ -16,8 +16,8 @@
     "# 12th exercise: <font color=\"#C70039\">First Reinforcement Learning Game (*Frozen Lake*) using OpenAI Gym</font>\n",
     "* Course: AML\n",
     "* Lecturer: <a href=\"https://www.gernotheisenberg.de/\">Gernot Heisenberg</a>\n",
-    "* Author of notebook: <a href=\"https://www.gernotheisenberg.de/\">Gernot Heisenberg</a>. This notebook is based on the great post and notebook from [Rodolfo Mendes](https://morioh.com/p/18a96b9091d3).\n",
-    "* Date:   08.08.2023\n",
+    "* Author of notebook: Finn Heydemann\n",
+    "* Date:   13.01.2024\n",
     "\n",
     "<img src=\"https://launchyourintelligentapphome.files.wordpress.com/2019/05/frozenlake_legended.png?w=531\" style=\"float: center;\" width=\"600\">\n",
     "\n",
