--- a/Ex8.Regular.GenerativeAdversarialNetwork.ipynb
+++ b/Ex8.Regular.GenerativeAdversarialNetwork.ipynb
@@ -22198,9 +22198,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c376d4be-713a-48de-94a4-dfe26c47d9ed",
+   "metadata": {},
+   "source": [
+    "to further improve the results, one could further increase the epochs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad1091a-1c4f-4121-91e8-4b53916710c5",
+   "id": "4af2ef95-e316-4eee-b090-86a094d22522",
    "metadata": {},
    "outputs": [],
    "source": []
