--- a/Ex11.InterpretableML.with.LIME.ipynb
+++ b/Ex11.InterpretableML.with.LIME.ipynb
@@ -1709,6 +1709,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"LIME.jpeg\" alt=\"drawing\" width=\"1000\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LIME is here used to find the most sigificant superpixels. The complex model is replaced with a much simpler linear model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
