--- a/InterpretableML.with.LIME.TabularData.ipynb
+++ b/InterpretableML.with.LIME.TabularData.ipynb
@@ -165,8 +165,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score 0.5153574066156178\n",
-      "Accuracy 0.9403131115459883\n"
+      "F1 Score 0.5275288937809577\n",
+      "Accuracy 0.9383561643835616\n"
      ]
     }
    ],
@@ -195,7 +195,18 @@
    },
    "outputs": [],
    "source": [
-    "lime = LimeTabular(predict_fn=rf.predict_proba, data=X_train, random_state=1)"
+    "X_train = X_train.astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lime = LimeTabular(model=rf, data=X_train, random_state=1)"
    ]
   },
   {
@@ -207,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -215,8 +226,8 @@
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/2653934568064/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/2653934568064/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7122/140425362849024/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7122/140425362849024/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -234,13 +245,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -250,9 +254,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aml",
    "language": "python",
-   "name": "python3"
+   "name": "aml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -264,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
